Allowing the clocks to run on different times

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <script type="text/javascript">
       Lovely(["analog-clock"], function(Clock) {
         var c1 = new Clock().insertTo('#large-clock');
-        var c2 = new Clock({label: 'Moscow'}).insertTo('#small-clock');
-        var c3 = new Clock({label: 'New York'}).insertTo('#small-clock');
-        var c4 = new Clock({label: 'Tokyo'}).insertTo('#small-clock');
+        var c2 = new Clock().insertTo('#small-clock');
+        var c3 = new Clock().insertTo('#small-clock');
+        var c4 = new Clock().insertTo('#small-clock');
+
+        var utc = new Date();
+        utc     = new Date(utc.getTime() + utc.getTimezoneOffset() * 60000).getTime();
+
+        c2.label('Moscow'  ).time(utc + 4 * 3600000);
+        c3.label('New York').time(utc - 4 * 3600000);
+        c4.label('Tokyo'   ).time(utc + 9 * 3600000);
       });
     </script>
     <style type="text/css">
